@@ -1,0 +1,20 @@
+/*
+ * Copyright 2022, HENSOLDT Cyber
+ *
+ * SPDX-License-Identifier: GPL-2.0-only
+ */
+
+/ {
+    chosen {
+        /*
+         * - elfloader and kernel use SBI console by default
+         * - QEMU emulates a SiFive PLIC and CLINT by default
+         *
+         * Nothing needed for elfloader
+         *      seL4,elfloader-devices = ... ;
+         *
+         */
+        seL4,kernel-devices =
+            &{/soc/plic@c000000};
+    };
+};
